WIP: Rewrote fbld abstract syntax tree.
But didn't update anything else for it, so the code will certainly not
compile yet.

--- a/langs/fbld.txt
+++ b/langs/fbld.txt
@@ -231,7 +231,7 @@ Syntax Reference
                 [mtype_decl [mtype_decl [...]]] '}' ';' ;
 
   mdefn ::= 'mdefn' mname '<' [tname [',' tname [...]]] ';'
-                              [mref [',' mref [...]]] ';'
+                              [iref mname [',' iref mname [...]]] ';'
                               iref '>' {
                 [mdefn_decl [mdefn_decl [...]]] '}' ';' ;
 
