--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,14 @@
 Fbld M2 Kickoff:
-* Separate Using, Type, Func, and Proc decls.
+* Rewrite compiler, under the assumption that all entities and mrefs and such
+  have been resolved. At this point, simple test cases should work.
+* Rethink how to translate fblc test cases to fbld.
+* Update check to resolve entities in place.
+
+Fbld M2 Cleanup:
+* CheckTypesMatch put error then loc to match ReportError.
 * Rename FbldField to FbldId and use it for var_expr as well.
 * Rename targs and margs targv and margv
 * Re-organize parse.y to match order in fbld.h, and finish it out.
-* Continue adapting fbld to new polymorphism and syntax from there.
  
 Fbld Test:
 * Test case when struct or union type is not redeclared in mdefn from mdecl.
@@ -27,7 +32,6 @@ Fbld Cleanup:
 * Define FBLD_*_EXPR tags separate from FBLC_*_EXPR tags.
 * Don't allocate and leak FbldLocs like crazy in the lexer/parser.
 * Better organize the contents of parse.y.
-* Add support for returning multiple errors from check.
 * Cleanup fbld types to have less pointers - don't include an indirection just
   because it makes parsing easier. Copy values in parser as needed instead.
 * Use consistent style for error messages. Capitalize? Punctuate?
