--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Fbld M2 Kickoff:
+* Factor out common code for checking if entities are equal.
 * Rewrite compiler, under the assumption that all entities and mrefs and such
   have been resolved. At this point, simple test cases should work.
 * Rethink how to translate fblc test cases to fbld.
