Update resolved entities in check.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@ Fbld M2 Kickoff:
 
 Fbld M2 Cleanup:
 * CheckTypesMatch put error then loc to match ReportError.
+* Add comments to check indicating what entities and mrefs are resolved.
+* General code cleanup of check.
 * Rename targs and margs targv and margv
 * Re-organize parse.y to match order in fbld.h, and finish it out.
 * Figure out how to deal with allocations in fbld check and compile, and maybe
