Ported a couple of tests from fblc to fbld.

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,7 @@ Fbld M2 Cleanup:
 * Review all documentation and other things for consistency.
  
 Fbld Test:
+* Port tests 2.2.1-06* through 2.2.1-17*, less 2.2.1-16*
 * Test mismatch: struct Foo in mtype vs. union Foo in mdefn.
 * Test case when struct or union type is not redeclared in mdefn from mdecl.
 * Test case when an mdefn decl doesn't match its corresponding mdecl decl.
