--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
 Fbld Test:
 * Port tests 2.2.1-06* through 2.2.1-17*, less 2.2.1-16*
-* Write code to check that all mtype declarations have a corresponding proper
-  mdefn implementation.
 * Test all ways an mtype decl can mismatch against an mdefn decl.
+  - for both type and function declarations.
 * Test case when abstract type is used as select for conditional.
 * Test that all imported names exist in the module they are imported from.
 * Port remainder of fblc tests to fbld.
