Add support for link and exec processes.
In theory now we have full support for processes in fbld.

--- a/langs/fblc.txt
+++ b/langs/fblc.txt
@@ -793,7 +793,7 @@ progress.
 
   pstmt ::= proc ';'                                                          (* proc *)
          |  tname '<~>' pname ',' pname ';' pstmt                             (* link *)
-         |  tname vname = pstmt [',' tname vname = pstmt [...]]] ';' pstmt    (* execution *)
+         |  tname vname = proc [',' tname vname = proc [...]]] ';' pstmt    (* execution *)
          ;
      
 
